# devflow-live2d

./: .gitignore  README.ja.md  README.md  README.zh-CN.md  main.js  notes.md  package-lock.json  package.json  preload.js  task_plan.md
assets/live2d/: README.md  manifest.example.json  manifest.json
assets/live2d/adapters/: cubism-official-adapter.example.js  official-demo-preview.js  official-demo-runtime.js
assets/live2d/models/nito-runtime/: ni-j.live2d.json  nico.live2d.json  nico.model3.json  nietzsche.live2d.json  nipsilon.live2d.json  nito.live2d.json
assets/live2d/models/official-natori-demo/: README.md
build-resources/: icon.icns
scripts/: check-live2d-assets.mjs  import-official-sdk.mjs  prepare-bundle-resources.mjs  prepare-tauri-web.mjs
src/: avatar-state.js  bubble-text.js  dialogue-queue.js  interaction-controller.js  ipc-channels.js  live2d-adapter.js  live2d-config.js  live2d-model-catalog.js  runtime-registry.js  status-bubble.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: README.md
src/app/: README.md  service-runtime.js  window-bounds.js
src/avatar/: README.md  avatarState.js  interruptPolicy.js
src/dialogue/: README.md  persona-ai.js  persona-chat.js  persona-lines.js  queue.js
src/event-mapping/: README.md  normalizeEvent.js
src/runtime/: README.md
tests/: live2d-state.test.ts  persona-chat.test.ts
ui/: app.js  index.html  styles.css  tauri-api.js
