[package]
name = "dpartner"
version = "0.2.0"
description = "macOS Live2D desktop overlay for devflow"
authors = ["weirwei"]
edition = "2021"

[lib]
name = "dpartner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "DPartner"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
tauri-plugin-global-shortcut = "2"
